# green-sc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yaml
src/: CMakeLists.txt
src/green/sc/: common_defs.h  common_utils.h  cyclic_vector_space_fock_sigma.h  except.h  fock_sigma.h  mixing.h  residuals.h  sc_loop.h  solver.h  vector_space_fock_sigma.h
test/: CMakeLists.txt  sc_test.cpp
